# Ryao

./: .gitignore  .gitignore.bak  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  xmake.lua
core/Damping/: CMakeLists.txt  Damping.h  Green_Damping.cpp  Green_Damping.h
core/Damping/include/: Damping.h  GreenDamping.h
core/Damping/src/: GreenDamping.cpp
core/Geometry/: AABB_Tree.cpp  AABB_Tree.h  CMakeLists.txt  CONSTRAINTS.h  Capsule.cpp  Capsule.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  KINEMATIC_SHAPE.h  Line_Intersect.cpp  Line_Intersect.h  Sphere.cpp  Sphere.h  TET_Mesh.cpp  TET_Mesh.h  TET_Mesh_Faster.cpp  TET_Mesh_Faster.h
core/Geometry/include/: AABBTree.h  CONSTRAINTS.h  Cube.h  Cylinder.h  FileIO.h  KINEMATIC_SHAPE.h  LineIntersect.h  Sphere.h  TETMesh.h  TETMeshFaster.h  TETMeshPBD.h  TET_Mesh.h  TET_Mesh_Faster.h  TET_Mesh_PBD.h  TriMeshPBD.h
core/Geometry/src/: AABBTree.cpp  Cube.cpp  Cylinder.cpp  LineIntersect.cpp  Sphere.cpp  TETMesh.cpp  TETMeshFaster.cpp  TETMeshPBD.cpp  TET_Mesh.cpp  TET_Mesh_Faster.cpp  TET_Mesh_PBD.cpp  TriMeshPBD.cpp
core/Hyperelastic/: ARAP.cpp  ARAP.h  CMakeLists.txt  Edge_Collision.cpp  Edge_Collision.h  Edge_Hybrid_Collision.cpp  Edge_Hybrid_Collision.h  Edge_Sqrt_Collision.cpp  Edge_Sqrt_Collision.h  HYPERELASTIC.cpp  HYPERELASTIC.h  Mcadams_Collision.cpp  Mcadams_Collision.h  Neo_Hookean_BW.cpp  Neo_Hookean_BW.h  SNH.cpp  SNH.h  SNH_With_Barrier.cpp  SNH_With_Barrier.h  StVK.cpp  StVK.h  Vertex_Face_Collision.cpp  Vertex_Face_Collision.h  Vertex_Face_Sqrt_Collision.cpp  Vertex_Face_Sqrt_Collision.h
core/Hyperelastic/include/: ARAP.h  EdgeCollision.h  EdgeHybridCollision.h  EdgeSqrtCollision.h  HYPERELASTIC.h  McadamsCollision.h  NeoHookeanBW.h  SNH.h  SNHWithBarrier.h  StVK.h  VertexFaceCollision.h  VertexFaceSqrtCollision.h
core/Hyperelastic/src/: ARAP.cpp  EdgeCollision.cpp  EdgeHybridCollision.cpp  EdgeSqrtCollision.cpp  HYPERELASTIC.cpp  McadamsCollision.cpp  NeoHookeanBW.cpp  SNH.cpp  SNHWithBarrier.cpp  StVK.cpp  VertexFaceCollision.cpp  VertexFaceSqrtCollision.cpp
core/PBDConstraint/: CMakeLists.txt
core/PBDConstraint/include/: PBDConstraint.h  PBDConstraintManagement.h  SpringConstraint.h  VolumeConstraint.h
core/PBDConstraint/src/: PBDConstraint.cpp  SpringConstraint.cpp  VolumeConstraint.cpp
core/Platform/: Arrow.h  BaseObject.cpp  BaseObject.h  CMakeLists.txt  Camera.h  Collision_Utils.cpp  Collision_Utils.h  Gui.cpp  Gui.h  Logger.h  Matrix_Utils.cpp  Matrix_Utils.h  RYAO.h  ReferencePlane.h  Shader.h  Simulation.h  Simulator.h  Timer.cpp  Timer.h  Viewer.cpp  Viewer.h  ViewerMesh.h
core/Platform/include/: Arrow.h  CollisionUtils.h  EigenUtils.h  FileIO.h  Logger.h  MatrixUtils.h  RYAO.h  RandomUtils.h  ReferencePlane.h  Shader.h  Simulation.h  Timer.h  Viewer.h  ViewerDynamicMesh.h  ViewerMesh.h  ViewerStaticMesh.h  ViewerTetMesh.h  ViewerTriMesh.h
core/Platform/src/: CollisionUtils.cpp  EigenUtils.cpp  Logger.cpp  MatrixUtils.cpp  RandomUtils.cpp  Shader.cpp  Timer.cpp  Viewer.cpp  ViewerDynamicMesh.cpp  ViewerTetMesh.cpp
core/Scene/: BunnyDrop.h  PBDBunnyDrop.h  PBDColth.h  PBDSimulation.h  Simulation.h
core/Solver/: CMakeLists.txt
core/Solver/include/: BackwardEulerVelocity.h  PBDSolver.h  SOLVER.h
core/Solver/src/: BackwardEulerVelocity.cpp  PBDSolver.cpp  SOLVER.cpp
core/Timestepper/: Backward_Euler_Position.cpp  Backward_Euler_Position.h  Backward_Euler_Velocity.cpp  Backward_Euler_Velocity.h  TIMESTEPPER.cpp  TIMESTEPPER.h
core/platform/: Arrow.h  BaseObject.cpp  BaseObject.h  Gui.cpp  Gui.h  Logger.h  RYAO.h  Simulation.h  Simulator.h  cpp_type_helper.h
demo/: CMakeLists.txt  main.cpp
include/: Gui.cpp  test.h
include/platform/: Arrow.h  BaseObject.cpp  BaseObject.h  Gui.h  Logger.cpp  ReferencePlane.h  Simulation.h
resources/tetgen/: bunny.1.edge  bunny.1.ele  bunny.1.face  bunny.1.node  bunny.1.smesh  cube.1.edge  cube.1.ele  cube.1.face  cube.1.node  cube.1.smesh  cube_5.1.edge  cube_5.1.ele  cube_5.1.face  cube_5.1.node  cube_5.1.smesh  elephant.1.edge  elephant.1.ele  elephant.1.face  elephant.1.node  elephant.1.smesh
shaders/: ReferencePlane.frag  ReferencePlane.vert  ViewerMeshLine.frag  ViewerMeshLine.vert  ViewerStaticMeshFill.vert  ViewerTetMeshFill.vert  ViewerTriMeshFill.frag
src/: CMakeLists.txt  Makefile  cmake_install.cmake  header.h  main.cpp
test/: CMakeLists.txt  bunny.off  test.cpp  test.h
